@@ -12,6 +12,7 @@ const run = ({messageText, sendMessage}) => {
 
 const patchNotes = 
 	'2019/12/18\n' +
+	'• Added echo command.\n' +
 	'• Fixed bug where bot got confused by its own name.\n';
 
 module.exports=run;
